added syntax highlighting and styling for default mdx elemnets

--- a/src/posts/my-first-post/index.mdx
+++ b/src/posts/my-first-post/index.mdx
@@ -42,7 +42,7 @@ A list of technologies used within the project:
 
 A little intro about the installation.
 
-```
+```git
 $ git clone https://example.com
 $ cd ../path/to/the/file
 $ npm install
@@ -104,4 +104,11 @@ A list of frequently asked questions
 
    | Headline 1 in the tablehead | Headline 2 in the tablehead | Headline 3 in the tablehead |
    | :-------------------------- | :-------------------------: | --------------------------: |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
    | text-align left             |      text-align center      |            text-align right |
