--- a/src/posts/my-second-post/index.mdx
+++ b/src/posts/my-second-post/index.mdx
@@ -81,3 +81,10 @@ A list of frequently asked questions
    | Headline 1 in the tablehead | Headline 2 in the tablehead | Headline 3 in the tablehead |
    | :-------------------------- | :-------------------------: | --------------------------: |
    | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
+   | text-align left             |      text-align center      |            text-align right |
