added table of content

--- a/src/posts/my-third-post/index.mdx
+++ b/src/posts/my-third-post/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: My Second Post! jello World
+title: My Third Post! jello World
 slug: my-third-post
 date: 21-06-2021
 featureImage: ml-1.jpg
