--- a/src/posts/custom-directives-with-express-graphql-part-2/index.mdx
+++ b/src/posts/custom-directives-with-express-graphql-part-2/index.mdx
@@ -6,17 +6,16 @@ featureImage: feature.jpg
 excerpt: Adding graphql schema and resolvers.
 ---
 
-import Video from "../../components/Video.js"
-import Gif from "../../components/Gif.js"
-import Checkpoint from "../../components/Checkpoint.js"
-import Note from "../../components/Note.js"
-
 ### Defining graphql schema
 
-We defined the overall structure in part-1 of this blog.
-Final code can be found here: [Link](https://github.com/pineapple45/custom-directives-with-express-graphql/tree/schema-splitting-part-3)
+We defined simple structure for our photos app in [part-1](/custom-directives-with-express-graphql-part-1) of this blog.
 
-The directory structure in the graphql folder will look something like this:
+📍 Final code: [Link](https://github.com/pineapple45/custom-directives-with-express-graphql/tree/main)
+
+🌐 Live preview: [Link](https://pineapple45.github.io/custom-directives-with-express-graphql/)
+
+In this post we will implement the graphql schema and the corrosponding resolvers. So without wasting any time let's start.
+According to the folder structure we defined in part-1 , the directory structure in the graphql folder will look something like this:
 
 ```
 |-src
@@ -154,22 +153,16 @@ export default schema
 Obviously the queries and mutations
 that I have implemented are what I thought are enough for this blog post. You can always update the
 features or even add new ones. There is so much scope for scaling in projects like these.
-Also the schema is getting a bit too long. So later on in this post or in the third part we will
-split it into seperate files (schema splitting).
+Also the schema is getting a bit too long. So later on in this post or in the third part we will split it into seperate files (schema splitting).
 
-<Checkpoint
-  checkpoint="The code till now can be found here"
-  repoLink="https://github.com/pineapple45/custom-directives-with-express-graphql/tree/graphql-schema-formation-part-2"
-/>
+👉 I might make a few changes to this schema (specifically in the user schema) when I will integrate the server with frontend. But the overall there won't be any change in the overall logic. All of those changes will be reflected in the final code repository. In case of any problem , make sure to check with the final code.
+
+📌 The code till now can be found here: [Link](https://github.com/pineapple45/custom-directives-with-express-graphql/tree/graphql-schema-formation-part-2)
 
 ### Implementing resolvers
 
-<Note
-  note="Please note that while implementing resolvers, we will have quite a few
- functions and also some reusable ones. I have created utils files (as shown above in directory structure),
- that will contain all the reusable functions that will be shared among different resolvers. This is a very
- usefull file and will make our code super reusable !!🔥"
-/>
+👉 Please note that while implementing resolvers, we will have quite a few
+functions and also some reusable ones. I have created utils files (as shown above in directory structure), that will contain all the reusable functions that will be shared among different resolvers. This is a very usefull and will make our code super reusable !!🔥
 
 It is important to visualize what our resolvers will look like and how they will be structured.
 
@@ -182,9 +175,7 @@ First we will start by adding all resolvers related to **users**. These will be 
 5. assignRole
 6. deleteUser
 
-Resolvers for **posts** , **comments** and **likes** will be very much similar structure wise. Ofcourse , their
-functionality will differ. We will handle these in a bit. For now let's start with **createUser** & **login**
-resolvers which will provide registeration and login functionality!
+Resolvers for **posts** , **comments** and **likes** will be very much similar structure wise. Ofcourse , their functionality will differ. We will handle these in a bit. For now let's start with **createUser** & **login** resolvers which will provide registeration and login functionality!
 
 ### Creating the utilities file 🚀
 
@@ -217,6 +208,11 @@ export const transformUser = (user: UserType) => {
   }
 }
 ```
+
+### What is the use of transform functions in utils file?
+
+After our resolvers are done with their operation , the final data returned by them is passed to transform functions which inturn return the data in a formatted way which
+can be returned by the resolver and which is expected by the schema( or as I should say : _specified in our schema_). We have a couple of transform functions such as transformUser , transformPost , transformLike and transformComment.
 
 ### Creating createUser & login resolver
 
@@ -255,7 +251,7 @@ export const createUser = async (args: UserArgsType) => {
     )
   }
 
-  // encrypt password before savinf to database
+  // encrypt password before saving to database
   const hashedPassword = await bcrypt.hash(args.user.password, 12)
 
   const user = new User({
@@ -345,7 +341,7 @@ const checkIfValIsUsernameOrEmail = (usernameOrEmail: string) => {
 
 ### Adding the root resolver
 
-We create an index.ts file under our resolvers root directory as shown before and the following code in it
+We create an index.ts file under our resolvers root directory as shown before and the following code in it:
 
 ```ts
 import * as usersResolver from "./users"
@@ -357,10 +353,9 @@ const rootResolver: any = {
 export default rootResolver
 ```
 
-### updating the root index.ts file(entry point)
+### Updating the root index.ts file(entry point)
 
-Now we add the graphql code to our index.ts file at the entry point that will basically join our
-resolvers to the schema that we defined. This way the args will enter into our resolvers!
+Now we add the graphql code to our index.ts file at the entry point that will basically join our resolvers to the schema that we defined. This way the arguments defined in our schema will enter into our resolvers! We will use [express-graphql](https://www.npmjs.com/package/express-graphql) for this.
 The index.ts file till now looks like this:
 
 ```ts
@@ -402,77 +397,20 @@ mongoose
   })
 ```
 
-<Checkpoint
-  checkpoint="The code till now can be found here"
-  repoLink="https://github.com/pineapple45/custom-directives-with-express-graphql/tree/graphql-creatUser-login-resolver-part-2"
-/>
+📌 The code till now can be found here: [Link](https://github.com/pineapple45/custom-directives-with-express-graphql/tree/graphql-creatUser-login-resolver-part-2)
 
 Start the project and go to [http://localhost:4000/graphql](http://localhost:4000/graphql). This is the playground where we will test our queries
-and mutations. Later I will add a proper frontend using react-js. Let's test also with the queries and mutations
-that I have already written:
+and mutations. Later I will add a proper frontend using react-js. Let's test also with the queries and mutations that I have already written:
 
-<Video
-  videoSrcURL="https://drive.google.com/file/d/1J_HdBJ170wa29RiBLPDU1Hozqg1x6Yx0/preview"
-  title="createUser and login mutation query test"
-/>
-
-All queries and mutations used above are as follows:
-
-```
-# mutation to createUser
-# mutation {
-#   createUser(user: {username: "john doe", email: "john@test.com", password: "test123"}) {
-#    _id
-#     username
-#     email
-#     password
-#     role
-#   }
-# }
-
-# mutation to check error for already created user
-# mutation {
-#   createUser(user: {username: "john doe", email: "john@test.com", password: "test123"}) {
-#    _id
-#     username
-#     email
-#     password
-#     role
-#   }
-# }
-
-# mutation for login in user with email
-# query{
-#   login(usernameOrEmail:"john@test.com", password:"test123"){
-#     userId
-#     token
-#     tokenExpiration
-#   }
-# }
-
-# mutation for login in user with username
-# query{
-#   login(usernameOrEmail:"john doe", password:"test123"){
-#     userId
-#     token
-#     tokenExpiration
-#   }
-# }
-
-# mutation to check error with wrong email and password
-# query{
-#   login(usernameOrEmail:"john doe", password:"test12345"){
-#     userId
-#     token
-#     tokenExpiration
-#   }
-# }
-```
+%[https://youtu.be/MGOpckT-1yI]
 
 After running the createUser mutation above we have a user in our mongodb database as below:
-![created_user_in_db](./1.png)
+
+![1.png](https://cdn.hashnode.com/res/hashnode/image/upload/v1627573468308/P2UUlwOVw.png)
 
 ### Adding remaining resolvers related to users
+
+_listUsers _ resolver is responsible for listing all registered users in our database.
 
 ```ts
 /* listUsers resolver */
@@ -488,6 +426,8 @@ export const listUsers = async () => {
 }
 ```
 
+_getUserById _ resolver is responsible for listing any specific user from database with the help of an user-id.
+
 ```ts
 /* getUserById resolver*/
 export const getUserById = async (args: { _id: string }) => {
@@ -500,6 +440,8 @@ export const getUserById = async (args: { _id: string }) => {
 }
 ```
 
+_deleteUser _ resolver is responsible for deleting a user.
+
 ```ts
 /* deleteUser resolver */
 export const deleteUser = async (_id: string) => {
@@ -511,6 +453,8 @@ export const deleteUser = async (_id: string) => {
   }
 }
 ```
+
+_assignRole_ resolver is responsible for assigning a specific role to any registered user. By default _AUTH_USER_ is the default role. Also note that only Admin can update a user's role as per our requirements.
 
 ```ts
 /* assignRole resolver */
@@ -544,43 +488,26 @@ export const assignRole = async (args: {
 
 First let's test listUsers and getUserById:
 
-<Video
-  videoSrcURL="https://drive.google.com/file/d/19N4EAnoWOpryxEoOgecMUlv1pS8JPZvk/preview"
-  title="listUsers/getUserById"
-/>
+%[https://youtu.be/sZG5MwmWHng]
 
-<Note
-  note="Note that for now there is no authorisation. Anyone can authorise any role to anyone. Also in case of posts and comments, anyone can 
-  create posts or add comments. We will take care of authorisation in part-3"
-/>
+👉 Note that for now there is no authorisation. Anyone can authorize any role to anyone. Also in case of posts and comments, anyone can create posts or add comments. We will take care of authorization in part-3
 
-Now Let's assign a new role to a user. I create a new user with the name of jane doe.We will assign a role of MODERATOR to jane doe.
-For now let's assume John doe was already an ADMIN. Later we will add authorisation logic to check weather a person
-assigning a role to someone himself is ADMIN or not as told earlier!
+Now Let's assign a new role to a user. I create a new user with the name of jane doe. We will assign a role of MODERATOR to jane doe. For now let's assume John doe was already an ADMIN. Later we will add authorization logic to check weather a person
+assigning a role to someone himself is ADMIN or not!
 
-<Video
-  videoSrcURL="https://drive.google.com/file/d/15JtnN8_d21cNmKxCoG77pUGf48VYN5-B/preview"
-  title="assignRole"
-/>
+%[https://youtu.be/abewZfGDk3w]
 
 Now finally let's delete a user. Let's delete Jane Doe:
 
-<Video
-  videoSrcURL="https://drive.google.com/file/d/12rsEGZGko6sj87wg8e1ThAn8vAlQ7RP-/preview"
-  title="deleteUser"
-/>
+%[https://youtu.be/wZCT2SW9_SA]
 
-Seems like, all of our user resolvers works till now!
+Seems like, all of our user resolvers works till now!😃
 
-<Checkpoint
-  checkpoint="The code till now can be found here"
-  repoLink="https://github.com/pineapple45/custom-directives-with-express-graphql/tree/all-resolvers-related-to-users-part-2"
-/>
+📌 The code till now can be found here: [Link](https://github.com/pineapple45/custom-directives-with-express-graphql/tree/all-resolvers-related-to-users-part-2)
 
 ### Adding resolvers related to posts
 
-Let's first update the utils file where we add a few utility functions that will be used by
-all resolvers related to posts.
+Let's first update the utils file where we add a few utility functions that will be used by all resolvers related to posts.
 
 ```ts
 /* utils */
@@ -628,6 +555,7 @@ export const transformPost = (post: PostType) => {
   }
 }
 
+/* singleUser utility func to retreive single user by Id*/
 export const singleUser = async (userId: string) => {
   try {
     const user = await User.findById(userId)
@@ -637,6 +565,7 @@ export const singleUser = async (userId: string) => {
   }
 }
 
+/* postsByCreatorId utility func to list all posts created by a single creator(user) */
 export const postsByCreatorId = async (creatorId: string) => {
   try {
     const posts = await Post.find({ creatorId: creatorId })
@@ -650,6 +579,8 @@ export const postsByCreatorId = async (creatorId: string) => {
 ```
 
 Now we add all post resolvers:
+
+*createPost *resolver is responsible for creating a new post.
 
 ```ts
 /* createPost resolver */
@@ -670,6 +601,8 @@ export const createPost = async (args: PostArgsType) => {
 }
 ```
 
+_deletePost_ resolver is responsible for deleting a post.
+
 ```ts
 /* deletePost resolver */
 export const deletePost = async (_id: string) => {
@@ -682,6 +615,8 @@ export const deletePost = async (_id: string) => {
 }
 ```
 
+_getPostById_ is responsible for retreiving a single post.
+
 ```ts
 /* getPostById resolver */
 export const getPostById = async (args: { _id: string }) => {
@@ -693,6 +628,8 @@ export const getPostById = async (args: { _id: string }) => {
   }
 }
 ```
+
+*listPosts *resolver is responsible for listing all posts
 
 ```ts
 /* listPosts resolver*/
@@ -708,7 +645,7 @@ export const listPosts = async () => {
 }
 ```
 
-### updating the root resolver
+### Updating the root resolver
 
 ```ts
 import * as usersResolver from "./users"
@@ -722,34 +659,16 @@ const rootResolver: any = {
 export default rootResolver
 ```
 
-Now we test the post resolvers. Let's say John Doe was creating, listing and deleting a few posts.
-Assuming he is an ADMIN for now, ofcourse he can do such operations.
+Now we test the post resolvers. Let's say John Doe was creating, listing and deleting a few posts. Again assuming he is an ADMIN for now, he can do such operations.
 
-<Video
-  videoSrcURL="https://drive.google.com/file/d/1CGPS5ST8lBHZgU4-tp_XxOxjXw5cfK4m/preview"
-  title="create/delete/list-posts"
-/>
+%[https://youtu.be/c_y7KCV-m6g]
 
-<Note
-  note="Do notice that now we can also
-fetch the details of the user who created a post since we have already created all resolvers
-related to users. Similary when we create resolvers of comments and likes, we will also be able
-to fetch all comments and likes associated with each of the posts. Similar relationship will also
-be there for comments and likes. For eg. we will be able to fetch each like and the corrosponding
-user who created the like as well as the post on which like was added. You can imagine such nesting
-will keep on happening. Over here the power of graphql begins to shine!
-"
-/>
+👉 Do notice that now we can also fetch the details of the user who created a post since we have already created all resolvers related to users. Similary when we create resolvers of comments and likes, we will also be able to fetch all comments and likes associated with each of the posts. Similar relationship will also be there for comments and likes. For eg. we will be able to fetch each like and the corrosponding user who created the like as well as the post on which like was added. You can imagine such nesting will keep on happening. Over here the power of graphql begins to shine!
 
-We have successfully added posts resolver. Now since you have the idea how resolvers are being added, I
-would now add the comments and likes resolvers quickly. The structure and logic is pretty much similar
-to that of posts. You can try that on your own. Again everything is defined already in graphql schema.
+We have successfully added posts resolver. Now since you have the idea how resolvers are being added, I would now add the comments and likes resolvers quickly. The structure and logic is pretty much similar to that of posts. You can try that on your own. Again everything is defined already in graphql schema.
 You can refer to it whenever you are stuck and design resolvers according to that.
 
-<Checkpoint
-  checkpoint="The code till now can be found here"
-  repoLink="https://github.com/pineapple45/custom-directives-with-express-graphql/tree/posts-all-resolvers-part-2"
-/>
+📌 The code till now can be found here: [Link](https://github.com/pineapple45/custom-directives-with-express-graphql/tree/posts-all-resolvers-part-2)
 
 ### Adding comments resolvers
 
@@ -809,6 +728,7 @@ export const transformComment = (comment: CommentType) => {
 ```
 
 ```ts
+/* singlePost utility func to get post using post-id*/
 export const singlePost = async (postId: string) => {
   try {
     const post = await Post.findById(postId)
@@ -820,6 +740,7 @@ export const singlePost = async (postId: string) => {
 ```
 
 ```ts
+/* commentsByPostId utility func to get all comments on a single post */
 export const commentsByPostId = async (postId: string) => {
   try {
     const comments = await Comment.find({ postId: postId })
@@ -833,6 +754,7 @@ export const commentsByPostId = async (postId: string) => {
 ```
 
 ```ts
+/* commentsByCreatorId utility func to get all comments of a single user */
 export const commentsByCreatorId = async (creatorId: string) => {
   try {
     const comments = await Comment.find({ creatorId: creatorId })
@@ -862,6 +784,7 @@ interface CommentArgsType {
   comment: CommentType
 }
 
+/* listComments resolver to list all comments */
 export const listComments = async () => {
   try {
     const comments = await Comment.find()
@@ -873,6 +796,7 @@ export const listComments = async () => {
   }
 }
 
+/* getCommentById resolver to get single comment by it's id */
 export const getCommentById = async (args: { _id: string }) => {
   try {
     const comment = await Comment.findById(args._id)
@@ -882,6 +806,7 @@ export const getCommentById = async (args: { _id: string }) => {
   }
 }
 
+/* createComment  resolver to create a comment */
 export const createComment = async (args: CommentArgsType) => {
   const comment = new Comment({
     text: args.comment.text,
@@ -897,6 +822,7 @@ export const createComment = async (args: CommentArgsType) => {
   }
 }
 
+/* deleteComment  resolver to delete a single comment using it's id */
 export const deleteComment = async (_id: string) => {
   try {
     await Comment.findByIdAndDelete(_id)
@@ -907,7 +833,7 @@ export const deleteComment = async (_id: string) => {
 }
 ```
 
-### updating the root resolver file again:
+### Updating the root resolver file again:
 
 ```ts
 import * as usersResolver from "./users"
@@ -926,15 +852,9 @@ export default rootResolver
 Now let's test the comments resolver. For this I have already created 2 new users and 2 new posts. Then I will add
 1 comment to each of the posts.
 
-<Video
-  videoSrcURL="https://drive.google.com/file/d/1qcpRmS5VRVHVLLZzAK-Shhs222z7RMOF/preview"
-  title="create/delete/list-comments"
-/>
+%[https://youtu.be/6vYQklS8b3A]
 
-<Checkpoint
-  checkpoint="The code till now can be found here"
-  repoLink="https://github.com/pineapple45/custom-directives-with-express-graphql/tree/all-comments-resolvers-part-2"
-/>
+📌The code till now can be found here: [Link](https://github.com/pineapple45/custom-directives-with-express-graphql/tree/all-comments-resolvers-part-2)
 
 ### Adding likes resolvers
 
@@ -976,6 +896,7 @@ export const transformLike = (like: LikeType) => {
 ```
 
 ```ts
+/* likesByPostId utility func to list all likes related to any single post using post-id */
 export const likesByPostId = async (postId: string) => {
   try {
     const likes = await Like.find({ postId: postId })
@@ -989,6 +910,7 @@ export const likesByPostId = async (postId: string) => {
 ```
 
 ```ts
+/* likesByCreatorId utility func to list all likes related to any single user using user-id */
 export const likesByCreatorId = async (creatorId: string) => {
   try {
     const likes = await Like.find({ creatorId: creatorId })
@@ -1017,6 +939,7 @@ interface LikeArgsType {
   like: LikeType
 }
 
+/* listLikes resolver to list all likes */
 export const listLikes = async () => {
   try {
     const likes = await Like.find()
@@ -1028,6 +951,7 @@ export const listLikes = async () => {
   }
 }
 
+/* getLikeById resolver to retreive a single like using a like-id */
 export const getLikeById = async (args: { _id: string }) => {
   try {
     const like = await Like.findById(args._id)
@@ -1037,6 +961,7 @@ export const getLikeById = async (args: { _id: string }) => {
   }
 }
 
+/* createLike resolver for adding a like to the post */
 export const createLike = async (args: LikeArgsType) => {
   const like = new Like({
     postId: args.like.postId,
@@ -1051,6 +976,7 @@ export const createLike = async (args: LikeArgsType) => {
   }
 }
 
+/* deleteLike resolver for removing a like*/
 export const deleteLike = async (_id: string) => {
   try {
     await Like.findByIdAndDelete(_id)
@@ -1061,7 +987,7 @@ export const deleteLike = async (_id: string) => {
 }
 ```
 
-### updating the root resolver file again:
+### Updating the root resolver file again:
 
 ```ts
 import * as usersResolver from "./users"
@@ -1079,12 +1005,16 @@ const rootResolver: any = {
 export default rootResolver
 ```
 
-I won't be testing all likes resolver because the implementation is very much like comments.
-You can try this part on your own.
+I won't be testing all likes resolver because the implementation is very much like comments. You can try this part on your own.
 
-<Checkpoint
-  checkpoint="The code till now can be found here"
-  repoLink="https://github.com/pineapple45/custom-directives-with-express-graphql/tree/all-likes-resolvers-part-2"
-/>
+📌 The code till now can be found here: [Link](https://github.com/pineapple45/custom-directives-with-express-graphql/tree/all-likes-resolvers-part-2)
+
+If you have made it this far then congratulations.. we have completed the base of our complete! Now in next part we will implement custom directives and add the frontend!
+
+👉 Note: In the final code repository there is a client-redux folder which also consists of frontend with client graphql implementation using redux. Although , it is important to note that, functionalities such live as refetching of queries , implementaion of custom fetch and error policies is not implemented in this project.
+
+📍 Final code: [Link](https://github.com/pineapple45/custom-directives-with-express-graphql/tree/main)
+
+🌐 Live preview: [Link](https://pineapple45.github.io/custom-directives-with-express-graphql/)
 
 You can view Part 3 of the series here: [part 3 ->](/custom-directives-with-express-graphql-part-3)
