--- a/src/posts/custom-directives-with-express-graphql-part-1/index.mdx
+++ b/src/posts/custom-directives-with-express-graphql-part-1/index.mdx
@@ -21,8 +21,9 @@ part 3 which can be found below:
 
 The first 2 parts are just building blocks where the whole project setup is done. I initially thought to directly show how to implement custom-directives but then I realized it would be much better if I create a sample project along with it as it depicts the use-case in a much better and understandable way. To be honest, first 2 parts are not going to be much fun since these parts only involve testing and getting the base of the project completed . I will try to get these done as fast as I can.
 
-👉 Note In all of these parts I will not spend any time on the frontend since this posts mostly deal with the backend part. I will create a frontend in part 3 but will breeze through that part rather quickly.
+👉 Note that I am making use of graphql-directive because I think it is a light-weight tool that works really well with express-graphql . There are other tools such as graphql-tool that can also be used to write custom-directives but personally I prefer to pair graphql-tools with apollo-server. Its just my preference.
 
+Also note , In all of these parts I will not spend any time on the frontend since this posts mostly deal with the backend part. I will create a frontend in part 3 but will breeze through that part rather quickly.
 The app that we are working on is kind of like instagram ( i call it _photos!_ ). The functionality of the app includes the following:
 
 1. Create posts
